@@ -220,6 +220,7 @@ move.destination=Neuer Artikelname
 move.editcomment={0} wurde umbenannt in {1}
 move.exception.destinationexists=Der Artikel {0} existiert schon.
 move.exception.nodestination=Sie haben keinen Namen f\u00FCr den Zielartikel angegeben.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=Auf dieser Seite k\u00F6nnen Sie Artikel in andere Artikel (inklusive Ihrer Versionshistorie) verschieben. Der alte Artikel wird dabei automatisch zu einem REDIRECT auf den neuen Artikel. <b>Hinweis\:</b> Artikel k\u00F6nnen nicht verschoben werden, wenn der Zielartikel schon existiert.
 move.title=Verschiebe {0}
 recentchanges.caption.comments=Diskussion
