@@ -220,6 +220,7 @@ move.destination=New topic name
 move.editcomment={0} moved to {1}
 move.exception.destinationexists=The topic {0} already exists.
 move.exception.nodestination=No destination topic name specified.
+move.exception.permission=The topic {0} has been protected and cannot be moved by users without appropriate permissions.
 move.overview=This page provides functionality for moving a topic (including its history) to a new name.  The old topic name will then automatically redirect to the new topic name.  Note that the page <b>cannot</b> be moved if there is already a topic at the new destination.
 move.title=Move {0}
 recentchanges.caption.comments=Comments
